Fix file picker, enlarge top bar 120%

--- a/apply.html
+++ b/apply.html
@@ -180,14 +180,14 @@
 
         <div class="form-group">
           <label>이력서 <span class="required">*</span></label>
-          <label class="file-label" id="resumeLabel">파일 선택</label>
+          <label class="file-label" id="resumeLabel" for="resumeFile">파일 선택</label>
           <input type="file" class="file-input" id="resumeFile" accept=".pdf,.doc,.docx" required>
           <div class="file-name" id="resumeName"></div>
         </div>
 
         <div class="form-group">
           <label>자기소개서</label>
-          <label class="file-label" id="coverLabel">파일 선택</label>
+          <label class="file-label" id="coverLabel" for="coverFile">파일 선택</label>
           <input type="file" class="file-input" id="coverFile" accept=".pdf,.doc,.docx">
           <div class="file-name" id="coverName"></div>
         </div>
