--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
           </div>
         </div>
         <div class="position" data-lang="en">
-          <h3 class="position-title">[Full-time] Digital Asset Systematic Investment</h3>
+          <h3 class="position-title">[Full-time] Digital Asset Systematic Trading</h3>
           <div class="position-details">
             <p><strong>Job Description</strong> Asset management / Quantitative and arbitrage investment strategies development</p>
             <p><strong>Requirement</strong> Bachelor's degree or higher, or expected to graduate within 6 months / Open to candidates of all levels</p>
@@ -299,7 +299,7 @@
           </div>
         </div>
         <div class="position" data-lang="en">
-          <h3 class="position-title">[Intern] Digital Asset Systematic Investment</h3>
+          <h3 class="position-title">[Intern] Digital Asset Systematic Trading</h3>
           <div class="position-details">
             <p><strong>Job Description</strong> Quantitative and arbitrage investment strategies development and research</p>
             <p><strong>Requirement</strong> Bachelor's degree or higher, or expected to graduate within 6 months (Current students must be available to work at least 20 hours per week)</p>
