--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="top-bar" id="topBar">
     <div class="top-bar-inner">
       <button class="toc-toggle-btn" id="mobileTocToggle" aria-expanded="false">Contents &#9662;</button>
-      <a href="#cover" class="top-bar-logo">
+      <a href="#" class="top-bar-logo" onclick="window.scrollTo({top:0,behavior:'smooth'});return false;">
         <img class="top-bar-logo-icon" src="logo-icon.png" alt="Pebble">
         <span class="top-bar-logo-text">Pebble</span>
       </a>
@@ -102,11 +102,11 @@
             <dd>비정형 데이터를 활용 가능한 데이터로 변환 및 분석하여 투자 전략 실행</dd>
           </dl>
 
+          <p>물론 Quant, Arbitrage 전략 또한 만능은 아닙니다. 업계에서 활용하는 전략은 overfitting의 위험을 충분히 경계하지 못한 경우가 많으며 이에 따라 전략의 쏠림이 심화되어 굉장히 짧은 기간에 걸쳐 장기간의 성과를 반납하는 역사를 반복하기도 합니다. Arbitrage는 기술과 인프라에 대한 대중의 접근이 용이해지며 점차 성과가 낮아지고 있습니다.</p>
+
           <p class="emphasis-block">페블에는 외부 투자자와 고객이 없습니다.</p>
 
           <p>페블은 근거 없는 자신감은 지양합니다. 다만, 투자의 패러다임이 바뀌고 있음을 이해하고 기술을 활용한 투자 전략에 집중합니다. 시장 가격의 위대함을 이해하지 못하는 기술은 실패하고, 기술을 무시하는 자아도취형 전문가 또한 실패합니다. 페블은 설립 이래 직관 대신 기술에 기반한 투자를 통해 꾸준히 성과를 내고 있습니다. 페블은 위험 조정 수익률을 최대화하는 것을 목표로 합니다. 페블의 투자 전략 특성을 고려하여, 불특정 다수를 대상으로 한 펀딩 등 운용 규모의 확대를 계획하고 있지 않으며, 상당 기간 자기자본 투자를 지속할 예정입니다.</p>
-
-          <p>물론 Quant, Arbitrage 전략 또한 만능은 아닙니다. 업계에서 활용하는 전략은 overfitting의 위험을 충분히 경계하지 못한 경우가 많으며 이에 따라 전략의 쏠림이 심화되어 굉장히 짧은 기간에 걸쳐 장기간의 성과를 반납하는 역사를 반복하기도 합니다. Arbitrage는 기술과 인프라에 대한 대중의 접근이 용이해지며 점차 성과가 낮아지고 있습니다.</p>
         </div>
 
         <div data-lang="en">
@@ -123,11 +123,11 @@
             <dd>Converting and analyzing unstructured data into usable data to execute investment strategies.</dd>
           </dl>
 
+          <p>Of course, Quant and Arbitrage strategies are not infallible either. Strategies commonly used in the industry often fail to adequately guard against overfitting risks, leading to concentration of strategies and the historical pattern of surrendering long-term gains over very short periods. Returns from arbitrage have been gradually declining as public access to technology and infrastructure becomes easier.</p>
+
           <p class="emphasis-block">Pebble has no external investors or clients.</p>
 
           <p>Pebble avoids unfounded confidence. However, we understand that the investment paradigm is changing and focus on technology-driven investment strategies. Technology that fails to understand the efficiency of market prices will fail, and self-absorbed experts who ignore technology will also fail. Since its establishment, Pebble has consistently generated results through technology-based rather than intuition-based investment. Pebble aims to maximize risk-adjusted returns. Given the nature of Pebble's investment strategies, we do not plan to expand the scale of operations through funding targeting the general public, and will continue proprietary capital investment for a considerable period.</p>
-
-          <p>Of course, Quant and Arbitrage strategies are not infallible either. Strategies commonly used in the industry often fail to adequately guard against overfitting risks, leading to concentration of strategies and the historical pattern of surrendering long-term gains over very short periods. Returns from arbitrage have been gradually declining as public access to technology and infrastructure becomes easier.</p>
         </div>
       </section>
 
