--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
             <dd>비정형 데이터를 활용 가능한 데이터로 변환 및 분석하여 투자 전략 실행</dd>
           </dl>
 
-          <p>물론 Quant, Arbitrage 전략 또한 만능은 아닙니다. 업계에서 활용하는 전략은 overfitting의 위험을 충분히 경계하지 못한 경우가 많으며 이에 따라 전략의 쏠림이 심화되어 굉장히 짧은 기간에 걸쳐 장기간의 성과를 반납하는 역사를 반복하기도 합니다. Arbitrage는 기술과 인프라에 대한 대중의 접근이 용이해지며 점차 성과가 낮아지고 있습니다.</p>
+          <p class="emphasis-block">물론 Quant, Arbitrage 전략 또한 만능은 아닙니다.</p>
+
+          <p>업계에서 활용하는 전략은 overfitting의 위험을 충분히 경계하지 못한 경우가 많으며 이에 따라 전략의 쏠림이 심화되어 굉장히 짧은 기간에 걸쳐 장기간의 성과를 반납하는 역사를 반복하기도 합니다. Arbitrage는 기술과 인프라에 대한 대중의 접근이 용이해지며 점차 성과가 낮아지고 있습니다.</p>
 
           <p class="emphasis-block">페블에는 외부 투자자와 고객이 없습니다.</p>
 
@@ -123,7 +125,9 @@
             <dd>Converting and analyzing unstructured data into usable data to execute investment strategies.</dd>
           </dl>
 
-          <p>Of course, Quant and Arbitrage strategies are not infallible either. Strategies commonly used in the industry often fail to adequately guard against overfitting risks, leading to concentration of strategies and the historical pattern of surrendering long-term gains over very short periods. Returns from arbitrage have been gradually declining as public access to technology and infrastructure becomes easier.</p>
+          <p class="emphasis-block">Of course, Quant and Arbitrage strategies are not infallible either.</p>
+
+          <p>Strategies commonly used in the industry often fail to adequately guard against overfitting risks, leading to concentration of strategies and the historical pattern of surrendering long-term gains over very short periods. Returns from arbitrage have been gradually declining as public access to technology and infrastructure becomes easier.</p>
 
           <p class="emphasis-block">Pebble has no external investors or clients.</p>
 
