New logo, dark mode default, readability fix, word-break, team reorder

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="icon" type="image/png" href="favicon.png">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
 </head>
-<body class="lang-ko">
+<body class="lang-ko dark">
 
   <!-- Search -->
   <div class="search-overlay" id="searchOverlay">
@@ -25,7 +25,7 @@
       <button class="toc-toggle-btn" id="mobileTocToggle" aria-expanded="false">Contents &#9662;</button>
       <a href="#" class="top-bar-logo" onclick="window.scrollTo({top:0,behavior:'smooth'});return false;">
         <img class="top-bar-logo-icon" src="logo-icon.png" alt="Pebble">
-        <span class="top-bar-logo-text">Pebble</span>
+        <span class="top-bar-logo-text">Pebble Inc</span>
       </a>
       <div class="top-bar-actions">
         <a href="#" data-set-lang="ko" class="active">KO</a>
@@ -70,7 +70,7 @@
         </div>
         <div class="cover-title">
           <h1>Pebble</h1>
-          <p class="cover-subtitle">Established Algorithm-based Proprietary Trading Firm</p>
+          <p class="cover-subtitle">Established Algorithm-based<br class="mobile-br"> Proprietary Trading Firm</p>
         </div>
       </header>
 
@@ -162,6 +162,26 @@
 
         <div class="person">
           <div class="person-header">
+            <span class="person-name">Sunghak Kang</span>
+            <span class="person-role">COO</span>
+          </div>
+          <blockquote class="person-quote">"Seamos realistas, realicemos lo imposible!"</blockquote>
+          <ul class="person-history" data-lang="ko">
+            <li>전) McKinsey Seoul office, Associate Partner</li>
+            <li>전) LG Household &amp; Healthcare, Marketer</li>
+            <li>NYU Stern School of Business, MBA</li>
+            <li>고려대학교 경영학과</li>
+          </ul>
+          <ul class="person-history" data-lang="en">
+            <li>Former) McKinsey Seoul office, Associate Partner</li>
+            <li>Former) LG Household &amp; Healthcare, Marketer</li>
+            <li>NYU Stern School of Business, MBA</li>
+            <li>Korea University, BBA</li>
+          </ul>
+        </div>
+
+        <div class="person">
+          <div class="person-header">
             <span class="person-name">Jaeyeon Yoon</span>
             <span class="person-role">Head, System Trading</span>
           </div>
@@ -200,25 +220,6 @@
           </ul>
         </div>
 
-        <div class="person">
-          <div class="person-header">
-            <span class="person-name">Sunghak Kang</span>
-            <span class="person-role">COO</span>
-          </div>
-          <blockquote class="person-quote">"Seamos realistas, realicemos lo imposible!"</blockquote>
-          <ul class="person-history" data-lang="ko">
-            <li>전) McKinsey Seoul office, Associate Partner</li>
-            <li>전) LG Household &amp; Healthcare, Marketer</li>
-            <li>NYU Stern School of Business, MBA</li>
-            <li>고려대학교 경영학과</li>
-          </ul>
-          <ul class="person-history" data-lang="en">
-            <li>Former) McKinsey Seoul office, Associate Partner</li>
-            <li>Former) LG Household &amp; Healthcare, Marketer</li>
-            <li>NYU Stern School of Business, MBA</li>
-            <li>Korea University, BBA</li>
-          </ul>
-        </div>
       </section>
 
       <!-- 3. Career -->
