Update Abstract: refine KO/EN first sentence wording

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
       <!-- Abstract -->
       <section id="abstract" class="section">
         <h2>Abstract</h2>
-        <p data-lang="ko">페블은 알고리즘을 활용한 차익거래와 퀀트를 중심으로 하는 자기자본 시스템 운용 투자회사입니다. 디지털 자산 시장에서 저위험 저수익 거래를 통해 수익을 창출합니다. 폭넓은 데이터를 고도의 알고리즘으로 분석하고, 투자 빈도를 최대화해서 꾸준한 수익을 내는 것을 목표로 합니다. 페블은 자기자본 투자에 집중하고 있어 외부 투자자와 고객이 없습니다.</p>
-        <p data-lang="en">Pebble is a proprietary, system-driven investment firm focused on arbitrage and quantitative strategies using algorithms. We generate returns through low-risk, low-return trades in the digital asset market. We analyze a wide range of data with advanced algorithms and aim to generate consistent returns by maximizing trade frequency. Pebble focuses on proprietary capital investment and has no external investors or clients.</p>
+        <p data-lang="ko">페블은 알고리즘 기반 차익거래 및 퀀트를 중심으로 하는 시스템 운용 투자회사입니다. 디지털 자산 시장에서 저위험 저수익 거래를 통해 수익을 창출합니다. 폭넓은 데이터를 고도의 알고리즘으로 분석하고, 투자 빈도를 최대화해서 꾸준한 수익을 내는 것을 목표로 합니다. 페블은 자기자본 투자에 집중하고 있어 외부 투자자와 고객이 없습니다.</p>
+        <p data-lang="en">Pebble is a systematic trading firm specializing in algorithmic arbitrage and quantitative strategies. We generate returns through low-risk, low-return trades in the digital asset market. We analyze a wide range of data with advanced algorithms and aim to generate consistent returns by maximizing trade frequency. Pebble focuses on proprietary capital investment and has no external investors or clients.</p>
       </section>
 
       <!-- 1. Introduction -->
